[package]
name = "sunrise-service"
version = "0.1.0"
authors = ["Sunrise Prtocol"]
edition = "2018"

[dependencies]
hex-literal = "0.3.1"
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0.41"
codec = { package = "parity-scale-codec", version = "2.0.0" }

jsonrpc-core = "15.1.0"

sp-api = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-offchain = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-storage = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }

sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sc-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sc-consensus-manual-seal = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sc-consensus-slots = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }


frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate", branch = "rococo-v1"}

frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }

cumulus-client-network = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
cumulus-client-service = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
cumulus-client-consensus-relay-chain = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }

polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "rococo-v1" }
polkadot-service = { git = "https://github.com/paritytech/polkadot", branch = "rococo-v1", features = ["real-overseer"] }

# local dependencies
orml-oracle-rpc = { path = "../../../orml/oracle/rpc" }

ecosystem-renvm-bridge = { path = "../../../ecosystem-pallets/ren/renvm-bridge" }

srs-primitives = { package = "srs-primitives", path = "../../../primitives", default-features = false }
srs-pallet-evm = { path = "../../../pallets/evm", default-features = false }
srs-pallet-evm-rpc-runtime-api = { path = "../../../pallets/evm/rpc/runtime_api", default-features = false }
srs-pallet-nft = { path = "../../../pallets/nft" }
srs-pallet-staking-pool = { path = '../../../pallets/staking-pool', default-features = false }
srs-pallet-staking-pool-rpc = { path = '../../../pallets/staking-pool/rpc', default-features = false, version = '0.1.0' }

sunrise-rpc = { path = "../../../rpc" }


srs-runtime-common = { path = "../../../runtime/common" }
dawn-runtime = { path = "../../../runtime/dawn", optional = true }


[dev-dependencies]
sc-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", features = ["test-helpers"] }

[features]
default = ["std", "with-dawn-runtime"]
std = []
runtime-benchmarks = [
	"dawn-runtime/runtime-benchmarks",
]
with-dawn-runtime = [
	"dawn-runtime",
]
with-all-runtime = [
	"dawn-runtime",
]
